# ITMO-Project-Fall

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  generate_data.cpp  playground.cpp  rows.hpp
src/include/generators/: array.hpp  distributions.hpp  field.hpp  generate_data.hpp  record_batch.hpp
src/include/io/: batch_stream.hpp  binary_serializer.hpp  binary_stream.hpp  literals.hpp  parquet_stream.hpp  row.hpp  settings.hpp
src/include/models/: io_stream.hpp  sortable.hpp  status.hpp  streamable.hpp  type_traits.hpp
src/include/sorting/: arrow_sort.hpp  bucket_sort.hpp  bucket_split.hpp  merge_sort.hpp  settings.hpp  sort_buffer.hpp
src/include/utils/: execution_timer.hpp
tests/: CMakeLists.txt  data.hpp  test.cpp
tests/system_check/: disk_binary.hpp  disk_streams.hpp  ram.hpp
